Point caching
- Point are now cached when they are first accessed
- Can be disabled by subclasses
- More documentation
- Added a data version system to prepare for future changes